# barrel

./: Cargo.toml
src/: camera.rs  codec.rs  image_writer.rs  lib.rs  main.rs  screen_capture.rs
