[package]
name = "barrel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
capture = ["captrs"]
camera = ["v4l"]

[dependencies]
thiserror = "1.0.58"
itoa = "1.0.10"
image = { version = "0.25.0", optional = true, default-features = false, features = ["gif"]}
captrs = { version = "0.3.1", optional = true }
v4l = { version = "0.14.0", optional = true}